--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native-stack": "^7.12.0",
     "expo": "~54.0.33",
     "expo-font": "~14.0.11",
+    "expo-haptics": "^15.0.8",
+    "expo-linear-gradient": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
