--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.6.0",
     "@react-navigation/bottom-tabs": "^7.13.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
+    "@supabase/supabase-js": "^2.95.3",
     "expo": "~54.0.33",
     "expo-font": "~14.0.11",
     "expo-haptics": "^15.0.8",
     "expo-linear-gradient": "^15.0.8",
+    "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
@@ -26,6 +30,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.3.2"
   },
