--- a/app.json
+++ b/app.json
@@ -31,7 +31,8 @@
     },
     "plugins": [
       "expo-font",
-      "@react-native-google-signin/google-signin"
+      "@react-native-google-signin/google-signin",
+      "expo-notifications"
     ]
   }
 }
