--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@react-navigation/native-stack": "^7.12.0",
     "@supabase/supabase-js": "^2.95.3",
     "expo": "~54.0.33",
+    "expo-asset": "~12.0.12",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.11",
     "expo-haptics": "^15.0.8",
     "expo-linear-gradient": "^15.0.8",
+    "expo-local-authentication": "~17.0.8",
     "expo-notifications": "~0.32.16",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
