--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native-stack": "^7.12.0",
     "@supabase/supabase-js": "^2.95.3",
     "@types/crypto-js": "^4.2.2",
-    "crypto-js": "^4.2.0",
+    "crypto-js": "^3.1.9-1",
     "expo": "~54.0.33",
     "expo-application": "~7.0.8",
     "expo-asset": "~12.0.12",
