--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.13.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
+    "@shopify/flash-list": "2.0.2",
     "@supabase/supabase-js": "^2.95.3",
     "@types/crypto-js": "^4.2.2",
     "crypto-js": "^3.1.9-1",
