--- a/app.json
+++ b/app.json
@@ -4,9 +4,6 @@
     "slug": "Cloudy",
     "scheme": "cloudy",
     "version": "1.0.0",
-    "android": {
-      "versionCode": 1
-    },
     "description": "A mindful space for your daily memories and gratitude.",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,13 +19,18 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFF9F0"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": true,
-      "package": "app.cloudy.journal"
+      "package": "app.cloudy.journal",
+      "navigationBar": {
+        "barStyle": "dark-content",
+        "backgroundColor": "#FFF9F0"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
