--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-store-review": "~9.0.9",
+    "i18next": "^25.8.13",
     "nativewind": "^4.2.1",
     "posthog-react-native": "^4.34.0",
     "react": "19.1.0",
+    "react-i18next": "^16.5.4",
     "react-native": "0.81.5",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-reanimated": "~4.1.1",
